--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -13,6 +13,7 @@
   <tbody>
     <% @shops.each do |shop| %>
       <tr>
+        <td><%= image_tag shop.image.url(:medium) %></td>
         <td><%= shop.title %></td>
         <td><%= shop.comment %></td>
         <td><%= shop.rating %></td>
