--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+
+  <!-- Header information -->
+  <%= render 'layouts/header' %>  
+
+  <!-- Flash Message -->
   <% flash.each do |name, msg| %>
     <%= content_tag(:div, msg, class: "alert alert-info") %>
   <% end %>
