--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,30 +1,17 @@
-<h1>Listing shops</h1>
+<% if !user_signed_in? %>
+    <div class="jumbotron">
+    <h1>更有味道的小众点评</h1>
+    <p>小众点评更给力，更犀利，更不留余地！一起来小众点评吧！</p>
+    <p><%= link_to "加入小团伙", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+  </div>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Comment</th>
-      <th>Rating</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @shops.each do |shop| %>
-      <tr>
-        <td><%= image_tag shop.image.url(:medium) %></td>
-        <td><%= shop.title %></td>
-        <td><%= shop.comment %></td>
-        <td><%= shop.rating %></td>
-        <td><%= link_to 'Show', shop %></td>
-        <td><%= link_to 'Edit', edit_shop_path(shop) %></td>
-        <td><%= link_to 'Destroy', shop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Shop', new_shop_path %>
+<div class="row">
+  <% @shops.each do |shop| %>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <%= link_to (image_tag shop.image.url(:medium), class: 'image'), shop %>
+      </div>
+    </div>
+  <% end %>
+</div>
