Updated title and rating to Chinese on shop show page

--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -7,11 +7,11 @@
           <table class="table">
             <tbody>
               <tr>
-                <td><strong>Title:</strong></td>
+                <td><strong>商户名:</strong></td>
                 <td><%= @shop.title %></td>
               </tr>
               <tr>
-                <td><strong>Rating:</strong></td>
+                <td><strong>小众评价:</strong></td>
                 <td><%= @shop.rating %></td>
               </tr>
             </tbody>
