--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -10,7 +10,7 @@
   <% @shops.each do |shop| %>
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <%= link_to (image_tag shop.image.url(:medium), class: 'image'), shop %>
+        <%= link_to (image_tag shop.image.url, class: 'image'), shop %>
         <div class="caption">
           <h5><%= shop.title %></h5>
         </div>
