--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,5 +1,9 @@
-<h1>Editing review</h1>
+<div class="container">
+  <div class="col-md-6 col-md-offset-3">
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', shop_path(@shop) %>
+    <%= link_to '取消', shop_path(@shop) %>
+
+  </div>
+</div>
