--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New review</h1>
+<div class="container">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', shop_path(@shop) %>
+    <%= link_to '取消', shop_path(@shop) %>
+  </div>
+</div>
