Modified shops/new, edit, form views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,3 +29,12 @@
   border-color: #ff7200;
   background-color: #ff7200;
 }
+
+.review-form {
+  margin-top: 65px;
+}
+
+.shop-form {
+  margin-top: 65px;
+}
+
