--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New shop</h1>
+<div class="shop-form">
+  <div class="col-md-6 col-md-offset-3">
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', shops_path %>
+    <%= link_to '取消', shops_path %>
+
+  </div>
+</div>
