--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,9 @@
-<div class="container">
-  <div class="col-md-6 col-md-offset-3">
-    <%= render 'form' %>
+<div class="review-form">
+  <div class="container">
+    <div class="col-md-6 col-md-offset-3">
+      <%= render 'form' %>
 
-    <%= link_to '取消', shop_path(@shop) %>
+      <%= link_to '取消', shop_path(@shop) %>
+    </div>
   </div>
 </div>
