--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -11,19 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="form-group">
+    <%= f.label :商户名 %><br>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :comment %><br>
-    <%= f.text_area :comment %>
+  <div class="form-group">
+    <%= f.label :商户介绍 %><br>
+    <%= f.text_area :comment, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
+  <div class="form-group">
+    <%= f.label :商户图片 %><br>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit "提交商户", class: "btn btn-default btn-block" %>
   </div>
 <% end %>
