--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing shop</h1>
+<div class="container">
+  <div class="col-md-6 col-md-offset-3">
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', @shop %> |
-<%= link_to 'Back', shops_path %>
+    <%= link_to '返回商户', shops_path %> |
+    <%= link_to '删除商户', @shop, method: :delete, data: {confirm: '真的要残忍删除嘛？'} %>
+
+  </div>
+</div>
